// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actually_typecheck.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
//@flow

var x: number = 42;
x();

=====================================output=====================================
//@flow

var x: number = 42;
x();

================================================================================
`;

exports[`outer_bogus.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
//@flow
var x = 42;
x();

export type K = mixed;

=====================================output=====================================
//@flow
var x = 42;
x();

export type K = mixed;

================================================================================
`;

exports[`typecheck_if_in_root.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
//@flow

var x: mixed = 42;
x();

=====================================output=====================================
//@flow

var x: mixed = 42;
x();

================================================================================
`;
